--- a/cocos/2d/libcocos2d.vcxproj.filters
+++ b/cocos/2d/libcocos2d.vcxproj.filters
@@ -262,6 +262,9 @@
     <Filter Include="ui\shaders">
       <UniqueIdentifier>{e6eaa24a-a21e-4c1d-b6b2-19326d129af2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="extension\Physics3D">
+      <UniqueIdentifier>{50304dd6-eb8d-4bd4-abbd-82ac0bd78b47}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\physics\CCPhysicsBody.cpp">
@@ -1788,6 +1791,15 @@
     </ClCompile>
     <ClCompile Include="..\editor-support\cocostudio\CCObjectExtensionData.cpp">
       <Filter>cocostudio\json</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\extensions\Physics3D\CCPhysics3D.cpp">
+      <Filter>extension\Physics3D</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\extensions\Physics3D\CCPhysics3DShape.cpp">
+      <Filter>extension\Physics3D</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\extensions\Physics3D\CCPhysicsSprite3D.cpp">
+      <Filter>extension\Physics3D</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -3501,6 +3513,15 @@
     </ClInclude>
     <ClInclude Include="..\editor-support\cocostudio\CCObjectExtensionData.h">
       <Filter>cocostudio\json</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\extensions\Physics3D\CCPhysics3D.h">
+      <Filter>extension\Physics3D</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\extensions\Physics3D\CCPhysics3DShape.h">
+      <Filter>extension\Physics3D</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\extensions\Physics3D\CCPhysicsSprite3D.h">
+      <Filter>extension\Physics3D</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
