--- a/tests/cpp-tests/proj.win32/cpp-tests.vcxproj.filters
+++ b/tests/cpp-tests/proj.win32/cpp-tests.vcxproj.filters
@@ -352,8 +352,8 @@
     <Filter Include="Classes\AllocatorTest">
       <UniqueIdentifier>{eed1887a-757e-4625-b21c-bbfcfaa5200f}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Classes\BulletTest">
-      <UniqueIdentifier>{b3b3bc0c-0449-40db-8613-5d0b58f9607d}</UniqueIdentifier>
+    <Filter Include="Classes\Physics3DTest">
+      <UniqueIdentifier>{31d7c504-94c7-43ab-818d-996f957a3741}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -927,8 +927,8 @@
     <ClCompile Include="..\Classes\PerformanceTest\PerformanceParticle3DTest.cpp">
       <Filter>Classes\PerformanceTest</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\BulletTest\BulletTest.cpp">
-      <Filter>Classes\BulletTest</Filter>
+    <ClCompile Include="..\Classes\Physics3DTest\Physics3DTest.cpp">
+      <Filter>Classes\Physics3DTest</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1700,8 +1700,8 @@
     <ClInclude Include="..\Classes\PerformanceTest\PerformanceParticle3DTest.h">
       <Filter>Classes\PerformanceTest</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\BulletTest\BulletTest.h">
-      <Filter>Classes\BulletTest</Filter>
+    <ClInclude Include="..\Classes\Physics3DTest\Physics3DTest.h">
+      <Filter>Classes\Physics3DTest</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
