--- a/cocos/2d/libcocos2d.vcxproj
+++ b/cocos/2d/libcocos2d.vcxproj
@@ -204,6 +204,8 @@ xcopy /Y /Q "$(ProjectDir)..\..\external\chipmunk\prebuilt\win32\release-lib\*.*
     <ClCompile Include="..\..\extensions\GUI\CCScrollView\CCScrollView.cpp" />
     <ClCompile Include="..\..\extensions\GUI\CCScrollView\CCTableView.cpp" />
     <ClCompile Include="..\..\extensions\GUI\CCScrollView\CCTableViewCell.cpp" />
+    <ClCompile Include="..\..\extensions\ImagePicker\ImagePicker.cpp" />
+    <ClCompile Include="..\..\extensions\ImagePicker\ImagePickerImpl.cpp" />
     <ClCompile Include="..\..\extensions\Particle3D\CCParticle3DAffector.cpp" />
     <ClCompile Include="..\..\extensions\Particle3D\CCParticle3DEmitter.cpp" />
     <ClCompile Include="..\..\extensions\Particle3D\CCParticle3DRender.cpp" />
@@ -724,6 +726,8 @@ xcopy /Y /Q "$(ProjectDir)..\..\external\chipmunk\prebuilt\win32\release-lib\*.*
     <ClInclude Include="..\..\extensions\GUI\CCScrollView\CCScrollView.h" />
     <ClInclude Include="..\..\extensions\GUI\CCScrollView\CCTableView.h" />
     <ClInclude Include="..\..\extensions\GUI\CCScrollView\CCTableViewCell.h" />
+    <ClInclude Include="..\..\extensions\ImagePicker\ImagePicker.h" />
+    <ClInclude Include="..\..\extensions\ImagePicker\ImagePickerImpl.h" />
     <ClInclude Include="..\..\extensions\Particle3D\CCParticle3DAffector.h" />
     <ClInclude Include="..\..\extensions\Particle3D\CCParticle3DEmitter.h" />
     <ClInclude Include="..\..\extensions\Particle3D\CCParticle3DRender.h" />
