--- a/tests/cpp-tests/CMakeLists.txt
+++ b/tests/cpp-tests/CMakeLists.txt
@@ -191,6 +191,7 @@ set(TESTS_SRC
   Classes/TransitionsTest/TransitionsTest.cpp
   Classes/UserDefaultTest/UserDefaultTest.cpp
   Classes/ZwoptexTest/ZwoptexTest.cpp
+  Classes/ImagePickerTest/ImagePickerTest.cpp
   Classes/FileUtilsTest/FileUtilsTest.cpp
   Classes/SpineTest/SpineTest.cpp
   Classes/DataVisitorTest/DataVisitorTest.cpp
