--- a/cocos/2d/libcocos2d_wp8.vcxproj
+++ b/cocos/2d/libcocos2d_wp8.vcxproj
@@ -205,6 +205,8 @@
     <ClInclude Include="..\..\extensions\GUI\CCScrollView\CCScrollView.h" />
     <ClInclude Include="..\..\extensions\GUI\CCScrollView\CCTableView.h" />
     <ClInclude Include="..\..\extensions\GUI\CCScrollView\CCTableViewCell.h" />
+    <ClInclude Include="..\..\extensions\ImagePicker\ImagePicker.h" />
+    <ClInclude Include="..\..\extensions\ImagePicker\ImagePickerImpl.h" />
     <ClInclude Include="..\..\extensions\Particle3D\CCParticle3DAffector.h" />
     <ClInclude Include="..\..\extensions\Particle3D\CCParticle3DEmitter.h" />
     <ClInclude Include="..\..\extensions\Particle3D\CCParticle3DRender.h" />
@@ -776,6 +778,8 @@
     <ClCompile Include="..\..\extensions\GUI\CCScrollView\CCScrollView.cpp" />
     <ClCompile Include="..\..\extensions\GUI\CCScrollView\CCTableView.cpp" />
     <ClCompile Include="..\..\extensions\GUI\CCScrollView\CCTableViewCell.cpp" />
+    <ClCompile Include="..\..\extensions\ImagePicker\ImagePicker.cpp" />
+    <ClCompile Include="..\..\extensions\ImagePicker\ImagePickerImpl.cpp" />
     <ClCompile Include="..\..\extensions\Particle3D\CCParticle3DAffector.cpp" />
     <ClCompile Include="..\..\extensions\Particle3D\CCParticle3DEmitter.cpp" />
     <ClCompile Include="..\..\extensions\Particle3D\CCParticle3DRender.cpp" />
