--- a/tests/cpp-tests/proj.wp8-xaml/cpp-testsComponent/cpp-testsComponent.vcxproj
+++ b/tests/cpp-tests/proj.wp8-xaml/cpp-testsComponent/cpp-testsComponent.vcxproj
@@ -234,6 +234,7 @@
     <ClCompile Include="..\..\Classes\ExtensionsTest\TableViewTest\CustomTableViewCell.cpp" />
     <ClCompile Include="..\..\Classes\ExtensionsTest\TableViewTest\TableViewTestScene.cpp" />
     <ClCompile Include="..\..\Classes\FileUtilsTest\FileUtilsTest.cpp" />
+    <ClCompile Include="..\..\Classes\ImagePickerTest\ImagePickerTest.cpp" />
     <ClCompile Include="..\..\Classes\InputTest\MouseTest.cpp" />
     <ClCompile Include="..\..\Classes\LabelTest\LabelTestNew.cpp" />
     <ClCompile Include="..\..\Classes\LightTest\LightTest.cpp" />
@@ -440,6 +441,7 @@
     <ClInclude Include="..\..\Classes\ExtensionsTest\TableViewTest\CustomTableViewCell.h" />
     <ClInclude Include="..\..\Classes\ExtensionsTest\TableViewTest\TableViewTestScene.h" />
     <ClInclude Include="..\..\Classes\FileUtilsTest\FileUtilsTest.h" />
+    <ClInclude Include="..\..\Classes\ImagePickerTest\ImagePickerTest.h" />
     <ClInclude Include="..\..\Classes\InputTest\MouseTest.h" />
     <ClInclude Include="..\..\Classes\LabelTest\LabelTestNew.h" />
     <ClInclude Include="..\..\Classes\LightTest\LightTest.h" />
